<resources>
    <string name="app_name">qfit-app</string>
    <string name="app_title">qfit</string>
    <string name="title_home">Favoritos</string>
    <string name="title_search">Explorar</string>
    <string name="subtitle_search">Descubre nuevas rutinas</string>
    <string name="title_profile">Mi Perfil</string>
    <string name="profile_name">Juan Perez</string>
    <string name="profile_age">25 años</string>
    <string name="edit">Editar perfil</string>
    <string name="activity">Mi Actividad</string>
    <string name="objectives">Mis Objetivos</string>
    <string name="searchHint">Buscar</string>
    <string name="comenzar">Comenzar</string>
    <string name="terminar">Terminar</string>
    <string name="exerciseDescription">Descripcion del ejercicio asi bien larga y detallada, manos adelante culo pa atras salta y cae cuidado no te tuerzas el tobillo y no aguantes la respiracion</string>
    <string name="listo">listo</string>

    <string name="loadExercises">Cargar ejercicios</string>
    <string name="showExercises">Mostrar ejercicios</string>
    <string name="showDetails">Ver detalles</string>
    <string name="sharedTitle">Te han compartido una rutina</string>
    <string name="routineNotFound">Rutina no encontrada</string>
    <string name="loginFirst">Debés loguearte primero</string>

    <string name="simple">SIMPLE</string>
    <string name="detailed">DETALLADA</string>
    <string name="selectRoutineType">Elije un modo</string>
    <string name="confirmExit">Está seguro que desea salir de la rutina actual?</string>
    <string name="confirmExitSubtitle">Se perderá su progreso actual</string>

    <string name="affirmative">SI</string>
    <string name="negative">NO</string>


    <string name="cycle1Title">Entrada en calor</string>
    <string name="cycle2Title">Ejercitación principal</string>
    <string name="cycle3Title">Enfriamiento</string>

    <string name="routineRemoved">"rutina removida"</string>
    <string name="routineAdded">rutina agregada a favoritos</string>

    <string name="exerciseReadyMessage">llegaste?</string>
    <string name="totalTimeMessage">tiempo total: </string>
    <string name="finishRoutineMessage1">Has completado</string>
    <string name="finishRoutineMessage2"> en </string>
    <string name="finishRoutineMessage3"> segundos,</string>
    <string name="finishRoutineMessage4">Felicitaciones!</string>

    <string name="puntuarRutina">Queres puntuar la rutina?</string>
    <string name="rate_routine_btn">Listo</string>

    <string name="orderBy">Ordenar por</string>
    <string-array name="ordenar">
        <item>@string/orderBy</item>
        <item>@string/id</item>
        <item>@string/name</item>
        <item>@string/detail</item>
        <item>@string/dateCreated</item>
        <item>@string/averageRating</item>
        <item>@string/difficulty</item>
        <item>@string/categoryId</item>
        <item>@string/creatorId</item>
    </string-array>

    <string name="id">ID</string>
    <string name="name">Nombre</string>
    <string name="detail">Detalle</string>
    <string name="dateCreated">Fecha de creación</string>
    <string name="averageRating">Rating</string>
    <string name="difficulty">Dificultad</string>
    <string name="categoryId">Categoría</string>
    <string name="creatorId">Creador</string>



    <string name="direction">Orden</string>
    <string-array name="orden">
        <item>@string/direction</item>
        <item>Ascendiente</item>
        <item>Descendiente</item>
    </string-array>
    <string name="sort">Ordenar</string>
    <string name="filter">Filtrar</string>

    <string name="descripcion">Descripción: </string>
    <string name="duracion">Duración: </string>
    <string name="dificultad">Dificultad: </string>
    <string name="title_activity_login">Inicio de Sesión</string>
    <string name="prompt_email">Correo Electrónico</string>
    <string name="prompt_username">Nombre de Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="action_sign_up_short">Registrarse</string>
    <string name="welcome">¡Bienvenido! </string>
    <string name="welcomeLong">Esperamos que tenga un buen dia de ejercitación intensa</string>
    <string name="invalid_username">Nombre de Usuario Inválido</string>
    <string name="invalid_password">Su contraseña debe tener al menos 8 caracteres</string>
    <string name="login_failed">"Error al iniciar sesión"</string>

    <string name="verifyCode">Verificar código</string>
    <string name="confirmationCode">Escriba su código de confirmación</string>
    <string name="sentCode">Código de confirmación enviado</string>
    <string name="correctCode">Cuenta verificada</string>
    <string name="incorrectCode">Código incorrecto</string>

    <string name="title_activity_routine_in_progress">routine_in_progress</string>

    <string name="total_time">tiempo total: </string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="confirmRemove">¿Eliminar de favoritos?</string>
    <string name="confirmLogOut">¿Cerrar sesión?</string>

    <string name="changeTheme">Cambiar colores</string>
    <string name="repetition">Repetición </string>

</resources>
