<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBack"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="612dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="387dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile">

        <ImageView
            android:id="@+id/profilePhoto"
            android:layout_width="297dp"
            android:layout_height="200dp"
            android:baselineAlignBottom="false"
            android:clickable="false"
            android:textAlignment="center"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_baseline_rowing_24"
            tools:src="@drawable/ic_baseline_rowing_24"
            tools:srcCompat="@drawable/ic_baseline_rowing_24"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/profileAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_age"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <com.google.android.material.chip.Chip
            android:id="@+id/profileEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textAlignment="center"
            android:textAllCaps="false"
            app:closeIcon="@drawable/ic_baseline_settings_24"
            app:closeIconEnabled="true" />

        <Button
            android:id="@+id/profileActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/greyFront"
            android:text="@string/activity"
            android:textAlignment="textStart"
            app:icon="@drawable/ic_baseline_assignment_turned_in_24"
            app:iconGravity="end" />

        <Button
            android:id="@+id/profileObjectives"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/greyFront"
            android:text="@string/objectives"
            android:textAlignment="viewStart"
            app:icon="@drawable/ic_baseline_golf_course_24"
            app:iconGravity="end" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>